# orm-loader

./: .gitignore  404.html  CHANGELOG.md  README.md  TODO.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.githooks/: pre-commit
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  not_working.yml
.github/workflows/: ci.yml  docs.yml  merge.yml  publish.yml  tests.yml
docs/: index.md
docs/guides/: incremental-loads.md
docs/loaders/: context.md  helpers.md  index.md  loaders.md
docs/registry/: descriptors.md  index.md  registry.md  validation.md  validation_report.md  validation_runner.md
docs/tables/: allocators.md  index.md  loadable_table.md  mat_view.md  orm_table.md  serialisable_table.md  typing.md
loaders/: index.html
loaders/context/: index.html
loaders/helpers/: index.html
loaders/loaders/: index.html
notebooks/: 02_test_file_load.ipynb  03_improve_load_perf.ipynb
orm_loader/: CHANGELOG.md  pyproject.toml
orm_loader/notebooks/: 01_setup_registry.ipynb
registry/: index.html
registry/descriptors/: index.html
registry/registry/: index.html
registry/validation/: index.html
registry/validation_report/: index.html
registry/validation_runner/: index.html
search/: search_index.json
src/orm_loader/: config.py  constants.py
src/orm_loader/backends/: __init__.py  base.py  postgres.py  resolve.py  sqlite.py
src/orm_loader/helpers/: __init__.py  bootstrap.py  bulk.py  discovery.py  logging.py  null_handlers.py  sql.py  sqlite.py
src/orm_loader/loaders/: data_classes.py  loader_interface.py  loading_helpers.py
src/orm_loader/mappers/: materialised_view_mixin.py
src/orm_loader/registry/: registry.py  validation.py  validation_report.py
src/orm_loader/tables/: __init__.py  loadable_table.py  orm_table.py  typing.py  (+1 more)
tables/: index.html
tables/allocators/: index.html
tables/loadable_table/: index.html
tables/mat_view/: index.html
tables/orm_table/: index.html
tables/serialisable_table/: index.html
tables/typing/: index.html
tests/: conftest.py  docker-compose.yaml  models.py  pg_db.py  pytest.ini
tests/backends/: test_base_backend.py  test_postgres_backend.py  test_sqlite_backend.py
tests/helpers/: test_discovery.py
tests/loaders/: test_casting.py  test_dedupe.py  test_delete_column.py  test_helpers.py  test_loader_e2e.py  test_pandas_loader.py  test_parquet_loader.py  test_pg_delete.py  test_pg_loader.py
tests/registry/: test_model_descriptor.py  test_registry.py  test_validation_e2e.py
tests/tables/: test_id_allocator.py  test_orm_table_base.py  test_serialisable_table.py  test_typing_protocols.py
(+19 files in other folders)
