[project]
name = "orm-loader"
version = "0.4.0"
description = "Generic base classes to handle ORM functionality for multiple downstream datamodels"
readme = "README.md"
authors = [
    { name = "gkennos", email = "georgina.kennedy@unsw.edu.au" }
]
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "sqlalchemy>=2.0.45",
]


classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Database :: Database Engines/Servers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://AustralianCancerDataNetwork.github.io/orm-loader"
Documentation = "https://AustralianCancerDataNetwork.github.io/orm-loader"
Repository = "https://github.com/AustralianCancerDataNetwork/orm-loader"
Issues = "https://github.com/AustralianCancerDataNetwork/orm-loader/issues"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2",
]
dev = [
    "pytest>=9.0.3",
    "mypy>=1.19.1",
    "ruff>=0.14.11",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.1",
    "requests>=2.33.0",
    "mkdocs>=1.6.1",
    "mkdocs-mermaid2-plugin",
    "Pygments>=2.20.0",
    "dotenv",
    "ruff"
]

[tool.setuptools]
packages = ["orm_loader"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"
markers = [
    "postgres: requires a running Postgres instance (set TEST_POSTGRES_URL)",
]

[tool.pyright]
reportMissingTypeStubs = false